--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 theme: jekyll-theme-cayman 
-title: [Your Name] Portfolio
+title: Donovan Aus Portfolio
 description: A showcase of my work and experience.
 show_downloads: false
 google_analytics: [Your-UA-ID]
